--- a/css/estilo.css
+++ b/css/estilo.css
@@ -362,3 +362,73 @@ margin: 20px;}
             grid-column: 8/10;
             grid-row:5/6;
         }
+
+/* BELOW THE GAME */
+.container-below{
+    max-width: 1500px;
+    width: 100%;
+    display: flex;
+    margin: 0 auto;
+    justify-content: space-between;
+    
+    margin-top: 30px;
+}
+
+/* INSERT MONEY */
+.money{
+    width: 35%;
+    text-align: center;
+    font-family: roboto medium;
+}
+
+.input{
+    background-color: transparent;
+    /* border-radius: 33%; */
+    text-align: center;
+    color: white;
+    border:transparent;
+}
+
+/* TOKENS */
+.tokens{
+    display: grid;
+    grid-template-columns: repeat(5,150px);
+    width: 65%;
+    justify-content: center;
+    display: none;
+    
+    
+}
+.token{
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    text-align: center;
+}
+.uno{
+    width: 80px;
+    grid-column: 1/2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.diez{
+    width: 80px;
+    grid-column: 2/3;
+}
+
+.veinticinco{
+    width: 80px;
+    grid-column: 3/4;
+}
+
+.cincuenta{
+    width:80px ;
+    grid-column: 4/5;
+}
+
+.cien{
+    width: 80px;
+    grid: 5/6;
+}
