--- a/css/estilo.css
+++ b/css/estilo.css
@@ -39,6 +39,7 @@ margin: 20px;}
 .number-generate{
     font-family: roboto medium;
     font-size: 30px;
+    color: white;
 }
 /* WAYS TO CALL ROULETTE */
 .call-roulette__div{
